[package]
name = "attester-backend"
authors = ["KILT <info@kilt.io>"]
edition = "2021"
homepage = "https://kilt.io/"
license-file = "LICENSE"
readme = "README.md"
version = "0.0.1"


[dependencies]
subxt = { version = "0.31", features = ["substrate-compat"] }
subxt-signer = { version = "0.31", features = ["subxt"] }
log = "0.4.17"
envy = "0.4"
hex = "0.4.3"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
jwt-compact = "0.8.0"
futures-util = "0.3"
actix-web = "4"
chrono = { version = "0.4.24", features = ["serde"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "time",
    "chrono",
] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde_json = { version = "1.0", features = ["raw_value"] }
actix-cors = "0.6.4"
thiserror = "1.0.49"
clap = { version = "4.4.6", features = ["env", "derive"] }
env_logger = "0.10.0"
actix-jwt-auth-middleware = "0.3.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
actix-web-httpauth = "0.8.1"
actix-files = "0.6.2"


[features]
spiritnet = []
